# TMFetchPlugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
examples/: TMFetchPlugin.ini
src/: Config.cpp  Config.h  Dialogs.rc  HttpClient.cpp  HttpClient.h  HttpFetchItem.cpp  HttpFetchItem.h  HttpFetchPlugin.cpp  HttpFetchPlugin.h  JsonPath.cpp  JsonPath.h  OptionsDialog.cpp  OptionsDialog.h  StringUtil.cpp  StringUtil.h  TMFetchPlugin.def  dllmain.cpp  resource.h
tests/: test_jsonpath.cpp
